Complete draft for desktop layout

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
     <body>
         <div id="main-div">
-            <div id="landing-page" class="full-page layout align-start">
-                <!-- The first page -->
+            <div id="landing-page" class="full-page layout align-start column-gap-very-large">
                 <div class="left-side">
                     <span class="logo margin-bottom-very-large">
                         <img class="margin-right-small" src="assets/logo.svg" alt="Haugesund Øyelegesenter logo">
@@ -34,7 +33,7 @@
                 </div>
                 <div class="right-side">
                     <nav class="nav-div margin-bottom-very-large">
-                        <p class="nav-link margin-right-medium">Kontakt</p>
+                        <p class="nav-link margin-right-medium" href="#contact-page">Kontakt</p>
                         <p class="nav-link margin-right-medium">Om oss</p>
                         <p class="nav-link margin-right-medium">Finn oss</p>
                         <p class="nav-link">Øyesykdommer</p>
@@ -42,15 +41,97 @@
                     <img class="landing-graphic" src="assets/landing_graphic.svg" alt="Landing page graphic">
                 </div>
             </div>
-            <div id="about-page" class="full-page">
-                <!-- About page -->
+            <div id="about-page" class="full-page-background about-background-color margin-bottom-large">
+                <div class="full-page layout column-gap-very-large">
+                    <div class="left-side">
+                        <h1 class="section-heading margin-bottom-medium">Hvem er vi?</h1>
+                        <span class="heading-accent margin-bottom-medium"></span>
+                        <h2 class="section-subheading margin-bottom-large">La oss fortelle deg litt om oss.</h2>
+                        <div class="text-box">
+                            <p class="normal-text margin-top-none">
+                                The path of the righteous man is beset on all sides by the iniquities of the selfish
+                                and the tyranny of evil men.
+                                Blessed is he who, in the name of charity and good will,
+                                shepherds the weak through the valley of darkness,
+                                for he is truly his brother's keeper and the finder of lost children.
+                                And I will strike down upon thee with great vengeance and furious anger
+                                those who would attempt to poison and destroy My brothers.
+                                And you will know My name is the Lord when I lay My vengeance upon thee.
+                            </p>
+                            <p class="normal-text margin-bottom-none">
+                                Now that we know who you are, I know who I am.
+                                I'm not a mistake! It all makes sense!
+                                In a comic, you know how you can tell who the arch-villain's going to be?
+                                He's the exact opposite of the hero. And most times they're friends, like you and me!
+                                I should've known way back when... You know why, David? Because of the kids.
+                                They called me Mr Glass.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="right-side">
+                        <img src="assets/about_graphic.svg" alt="About page graphic">
+                    </div>
+                </div>
             </div>
-            <div id="find-page" class="full-page">
-                <!-- Find us page -->
+            <div id="find-page" class="full-page-background find-background-color margin-bottom-large">
+                <div class="full-page layout column-gap-very-large">
+                    <div class="left-side">
+                        <h1 class="section-heading margin-bottom-medium">Hvor finner du oss?</h1>
+                        <span class="heading-accent margin-bottom-medium"></span>
+                        <h2 class="section-subheading margin-bottom-large">All infoen du trenger for å finne frem.</h2>
+                        <p class="normal-text margin-bottom-medium">Vi befinner oss midt i sentrum bare få minutter unna Markedet og Rådhuset. Vi hører til i samme bygg som Specsavers, i overetasjen.</p>
+                        <div class="find-card">
+                            <h3 class="find-card-section-heading">Addresse</h3>
+                            <p class="find-card-section-info margin-bottom-large">Haraldsgata 78, 5528 Haugesund</p>
+                            <h3 class="find-card-section-heading">Åpningstider</h3>
+                            <p class="find-card-section-info margin-bottom-none">Vi har åpent 09-19 fra mandag til onsdag.</p>
+                        </div>
+                    </div>
+                    <div class="right-side">
+                        <img class="border-radius-medium img-card" src="assets/gmaps.png" alt="Veibeskrivelse">
+                    </div>
+                    <!-- Find us page -->
+                </div>
             </div>
-            <div id="contact-page" class="full-page">
-                <!-- Contact page -->
+            <div id="contact-page" class="full-page-background contact-background-color margin-bottom-very-large">
+                <div class="full-page layout column-gap-very-large">
+                    <div class="left-side">
+                        <h1 class="section-heading margin-bottom-medium">Kontakt oss</h1>
+                        <span class="heading-accent margin-bottom-medium"></span>
+                        <span class="contact-subheading margin-bottom-large">
+                            <img class="margin-right-small" src="assets/phone.svg" alt="Phone icon">
+                            <h2 class="section-subheading inline">+47 52 70 94 05</h2>
+                        </span>
+                        <div class="text-box">
+                            <p class="normal-text margin-top-none">
+                                The path of the righteous man is beset on all sides by the iniquities of the selfish
+                                and the tyranny of evil men.
+                                Blessed is he who, in the name of charity and good will,
+                                shepherds the weak through the valley of darkness,
+                                for he is truly his brother's keeper and the finder of lost children.
+                                And I will strike down upon thee with great vengeance and furious anger
+                                those who would attempt to poison and destroy My brothers.
+                                And you will know My name is the Lord when I lay My vengeance upon thee.
+                            </p>
+                            <p class="normal-text margin-bottom-none">
+                                Now that we know who you are, I know who I am.
+                                I'm not a mistake! It all makes sense!
+                                In a comic, you know how you can tell who the arch-villain's going to be?
+                                He's the exact opposite of the hero. And most times they're friends, like you and me!
+                                I should've known way back when... You know why, David? Because of the kids.
+                                They called me Mr Glass.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="right-side">
+                        <img src="assets/contact_graphic.svg" alt="Contact page graphic">
+                    </div>
+                </div>
             </div>
+            <footer class="center-items">
+                <p>Made with 🖤 by Maximilian von Stephanides</p>
+            </footer>
+            <button class="to-top-button hide">Opp til toppen</button>
         </div>
     </body>
 </html>
