Place navbar in its own div

--- a/index.html
+++ b/index.html
@@ -20,28 +20,34 @@
 
     <body>
         <div id="main-div">
+            <div class="navbar-div center-items">
+                <nav class="navbar padding-top-small padding-bottom-small">
+                    <a class="no-bottom-border" href="#main-div">
+                        <span class="logo">
+                            <img class="margin-right-small" src="assets/logo.svg" alt="Haugesund Øyelegesenter logo">
+                            Haugesund<br>Øyelegesenter
+                        </span>
+                    </a>
+                    <div class="nav-div">
+                        <p class="nav-link margin-right-medium"><a href="#contact-page">Kontakt</a></p>
+                        <p class="nav-link margin-right-medium"><a href="#about-page">Om oss</a></p>
+                        <p class="nav-link margin-right-medium"><a href="#find-page">Finn oss</a></p>
+                        <p class="nav-link"><a href="#diseases-page">Øyesykdommer</a></p>
+                    </div>
+                </nav>
+            </div>
             <div id="landing-page" class="full-page layout align-start column-gap-very-large">
                 <div class="left-side">
-                    <span class="logo margin-bottom-very-large">
-                        <img class="margin-right-small" src="assets/logo.svg" alt="Haugesund Øyelegesenter logo">
-                        Haugesund<br>Øyelegesenter
-                    </span>
                     <h1 class="section-heading title margin-bottom-medium">Haugesund Øyelegesenter</h1>
                     <span class="heading-accent margin-bottom-medium"></span>
                     <h2 class="section-subheading margin-bottom-very-large">Den beste behandlingen for deg med øyesykdommer.</h2>
                     <button class="contact-button" aria-label="Kontakt Haugesund Øyelegesenter">Kontakt oss</button>
                 </div>
                 <div class="right-side">
-                    <nav class="nav-div margin-bottom-very-large">
-                        <p class="nav-link margin-right-medium" href="#contact-page">Kontakt</p>
-                        <p class="nav-link margin-right-medium">Om oss</p>
-                        <p class="nav-link margin-right-medium">Finn oss</p>
-                        <p class="nav-link">Øyesykdommer</p>
-                    </nav>
                     <img class="landing-graphic" src="assets/landing_graphic.svg" alt="Landing page graphic">
                 </div>
             </div>
-            <div id="about-page" class="full-page-background about-background-color margin-bottom-large">
+            <div id="about-page" class="full-page-background about-background-color margin-bottom-large border-bottom">
                 <div class="full-page layout column-gap-very-large">
                     <div class="left-side">
                         <h1 class="section-heading margin-bottom-medium">Hvem er vi?</h1>
@@ -128,7 +134,7 @@
                     </div>
                 </div>
             </div>
-            <footer class="center-items">
+            <footer class="footer">
                 <p>Made with 🖤 by Maximilian von Stephanides</p>
             </footer>
             <button class="to-top-button hide">Opp til toppen</button>
