Change width to 100% and add continue icon

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <img class="landing-graphic" src="assets/landing_graphic.svg" alt="Landing page graphic">
                 </div>
             </div>
-            <div id="about-page" class="full-page-background about-background-color margin-bottom-large border-bottom">
+            <div id="about-page" class="full-page-background about-background-color margin-bottom-large">
                 <div class="full-page layout column-gap-very-large">
                     <div class="left-side">
                         <h1 class="section-heading margin-bottom-medium">Hvem er vi?</h1>
@@ -138,6 +138,12 @@
                 <p>Made with 🖤 by Maximilian von Stephanides</p>
             </footer>
             <button class="to-top-button hide">Opp til toppen</button>
+            <a href="#about-page">
+                <svg class="continue-icon" width="34" height="47" viewBox="0 0 34 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path class="continue-arrow" d="M3 3L16.6989 17L31 3" stroke-width="7"/>
+                    <path class="continue-arrow" d="M3 28L16.6989 42L31 28" stroke-width="7"/>
+                </svg>
+            </a>
         </div>
     </body>
 </html>
