Add diseases page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                 </nav>
             </div>
-            <div id="landing-page" class="full-page layout align-start column-gap-very-large">
+            <div id="landing-page" class="full-page layout align-start column-gap-small">
                 <div class="left-side">
                     <h1 class="section-heading title margin-bottom-medium">Haugesund Øyelegesenter</h1>
                     <span class="heading-accent margin-bottom-medium"></span>
@@ -100,7 +100,55 @@
                     <div class="right-side">
                         <img class="border-radius-medium img-card" src="assets/screenshots/gmaps.png" alt="Veibeskrivelse">
                     </div>
-                    <!-- Find us page -->
+                </div>
+            </div>
+            <div id="diseases-page" class="full-page-background diseases-backgorund margin-bottom-very-large">
+                <div class="full-page diseases-layout">
+                    <h1 class="section-heading margin-bottom-medium">Øyesykdommer</h1>
+                    <span class="heading-accent margin-bottom-medium"></span>
+                    <h2 class="section-subheading margin-bottom-large">Informasjonen du trenger om ulike sykdommer</h2>
+                    <div class="disease-div">
+                        <div class="disease-card">
+                            <h3 class="disease-heading margin-bottom-small">Grå stær - Katarakt</h3>
+                            <p class="disease-text margin-top-none margin-bottom-medium">
+                                Grå stær (katarakt) er en naturlig aldringsprosess.
+                                Dette fører gradvis til redusert synsfunksjon.
+                                Man opplever å se uklart, som å se gjennom et skittent
+                                vindusglass. De fleste over 70 år har en begynnende grå stær.
+                            </p>
+                            <button class="disease-button">Les mer</button>
+                        </div>
+                        <div class="disease-card">
+                            <h3 class="disease-heading margin-bottom-small">Tørre øyne</h3>
+                            <p class="disease-text margin-top-none margin-bottom-medium">
+                                Mange pasienter har problemer med tørrhet i øynene.
+                                Dette gir forskjellige symptomer og har ofte et bredt spekter
+                                av årsaksforklaringer. Tørre øyne er vanlig med økende alder,
+                                og vanligere hos kvinner enn hos menn.
+                            </p>
+                            <button class="disease-button">Les mer</button>
+                        </div>
+                        <div class="disease-card">
+                            <h3 class="disease-heading margin-bottom-small">Grønn stær - Glaukom</h3>
+                            <p class="disease-text margin-top-none margin-bottom-medium">
+                                Grønn stær er en gruppe øyesykdommer som har til felles
+                                å primært kunne skade de fine nervetrådene i synsnerven.
+                                Dette påvirker pasienten i form av gradvis tap av synsfeltet,
+                                området hjernen oppfatter gjennom øynene.
+                            </p>
+                            <button class="disease-button">Les mer</button>
+                        </div>
+                        <div class="disease-card">
+                            <h3 class="disease-heading margin-bottom-small">Øyeforandringer ved diabetes</h3>
+                            <p class="disease-text margin-top-none margin-bottom-medium">
+                                Dårlig blodsukkerregulering over tid kan blant annet føre til
+                                endringer i de små blodkarene i kroppen. Dette kan føre til
+                                komplikasjoner i en rekke organer, også i øynene.
+                                En vanlig komplikasjon er diabetisk retinopati.
+                            </p>
+                            <button class="disease-button">Les mer</button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="contact-page" class="full-page-background contact-background-color margin-bottom-very-large">
