Add multiple changes to text styles Adjust letterspacing for uppercase headings and other text. Change font family to Source Serif/Sans Pro. Adjust font size for disease text and heading.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                 </nav>
             </div>
-            <div id="landing-page" class="full-page layout align-start column-gap-small">
+            <div id="landing-page" class="full-page layout align-start column-gap-small margin-bottom-massive">
                 <div class="left-side">
                     <h1 class="section-heading title margin-bottom-medium">Haugesund Øyelegesenter</h1>
                     <span class="heading-accent margin-bottom-medium"></span>
@@ -47,7 +47,7 @@
                     <img class="landing-graphic" src="assets/vector_graphics/landing_graphic.svg" alt="Landing page graphic">
                 </div>
             </div>
-            <div id="about-page" class="full-page-background about-background-color margin-bottom-large">
+            <div id="about-page" class="full-page-background about-background-color margin-bottom-massive">
                 <div class="full-page layout column-gap-very-large">
                     <div class="left-side">
                         <h1 class="section-heading margin-bottom-medium">Hvem er vi?</h1>
@@ -79,17 +79,17 @@
                     </div>
                 </div>
             </div>
-            <div id="find-page" class="full-page-background find-background-color margin-bottom-large">
+            <div id="find-page" class="full-page-background find-background-color margin-bottom-massive">
                 <div class="full-page layout column-gap-very-large">
                     <div class="left-side">
                         <h1 class="section-heading margin-bottom-medium">Hvor finner du oss?</h1>
                         <span class="heading-accent margin-bottom-medium"></span>
                         <h2 class="section-subheading margin-bottom-large">All infoen du trenger for å finne frem.</h2>
-                        <p class="normal-text margin-bottom-medium">Vi befinner oss midt i sentrum bare få minutter unna Markedet og Rådhuset. Vi hører til i samme bygg som Specsavers, i overetasjen.</p>
+                        <p class="normal-text margin-top-none margin-bottom-medium">Vi befinner oss midt i sentrum bare få minutter unna Markedet og Rådhuset. Vi hører til i samme bygg som Specsavers, i overetasjen.</p>
                         <div class="find-card">
                             <h3 class="find-card-section-heading">Addresse</h3>
                             <p class="find-card-section-info margin-bottom-large">
-                                <a class="address-link" href="https://www.google.no/maps/place/Haraldsgata+78,+5528+Haugesund/@59.4098144,5.2709039,17z/data=!3m1!4b1!4m5!3m4!1s0x463b9fcd1b07eeeb:0x685e8523239860b3!8m2!3d59.4098144!4d5.2730926" target="_blank">
+                                <a class="address-link" href="https://www.google.no/maps/place/Haraldsgata+78,+5528+Haugesund/@59.4098144,5.2709039,17z/data=!3m1!4b1!4m5!3m4!1s0x463b9fcd1b07eeeb:0x685e8523239860b3!8m2!3d59.4098144!4d5.2730926" target="_blank" rel="noopener">
                                     Haraldsgata 78, 5528 Haugesund
                                 </a>
                             </p>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
             </div>
-            <div id="diseases-page" class="full-page-background diseases-backgorund margin-bottom-very-large">
+            <div id="diseases-page" class="full-page-background diseases-background-color margin-bottom-massive">
                 <div class="full-page diseases-layout">
                     <h1 class="section-heading margin-bottom-medium">Øyesykdommer</h1>
                     <span class="heading-accent margin-bottom-medium"></span>
@@ -148,10 +148,20 @@
                             </p>
                             <button class="disease-button">Les mer</button>
                         </div>
+                        <svg class="diseases-graphic-top-right" width="150" height="178" viewBox="0 0 150 178" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="25" cy="86" r="25" fill="#76BCF6"/>
+                            <circle cx="90" cy="121" r="10" fill="#3D7ED1"/>
+                            <circle cx="40" cy="163" r="15" fill="#232A3A"/>
+                            <circle cx="110" cy="40" r="40" fill="#A6D8A1"/>
+                        </svg>
+                        <svg class="diseases-graphic-bottom-left" width="55" height="52" viewBox="0 0 55 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="20" cy="20" r="20" fill="#4AB33F"/>
+                            <circle cx="50" cy="47" r="5" fill="#2D4F9F"/>
+                        </svg>    
                     </div>
                 </div>
             </div>
-            <div id="contact-page" class="full-page-background contact-background-color margin-bottom-very-large">
+            <div id="contact-page" class="full-page-background contact-background-color margin-bottom-massive">
                 <div class="full-page layout column-gap-very-large">
                     <div class="left-side">
                         <h1 class="section-heading margin-bottom-medium">Kontakt oss</h1>
@@ -187,7 +197,7 @@
                 </div>
             </div>
             <footer class="footer">
-                <p>Made with 🖤 by <a class="personal-page-link strong-text" href="https://maximilian.netlify.app/" target="_blank">Maximilian von Stephanides</a></p>
+                <p>Made with 🖤 by <a class="personal-page-link strong-text" href="https://maximilian.netlify.app/" target="_blank" rel="noopener">Maximilian von Stephanides</a></p>
             </footer>
             <button class="to-top-button hide">Opp til toppen</button>
             <a href="#about-page">
