--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
         <link href="https://unpkg.com/webkul-micron@1.1.6/dist/css/micron.min.css" type="text/css" rel="stylesheet"> <!-- Micron js -->
         <script src="https://unpkg.com/webkul-micron@1.1.6/dist/script/micron.min.js" type="text/javascript"></script> <!-- Micron js -->
         <script src="navigation.js"></script>
+        <script src="scroll_events.js"></script>
     </head>
 
     <body>
-        <div id="main-div">
+        <main id="main-div">
             <div class="navbar-div center-items">
                 <nav class="navbar padding-top-small padding-bottom-small">
                     <a href="#main-div">
@@ -34,6 +35,11 @@
                         <p class="margin-right-medium"><a class="nav-link" href="#find-page">Finn oss</a></p>
                         <p><a class="nav-link" href="#diseases-page">Øyesykdommer</a></p>
                     </div>
+                    <svg class="menu-icon" onclick="toggleMobileMenu()" width="50" height="50" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M3 12H21" stroke="#F5F6FA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M3 6H21" stroke="#F5F6FA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M3 18H21" stroke="#F5F6FA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
                 </nav>
             </div>
             <div id="landing-page" class="full-page layout align-start column-gap-small margin-bottom-massive">
@@ -206,6 +212,7 @@
                     <path class="continue-arrow" d="M3 28L16.6989 42L31 28" stroke-width="7"/>
                 </svg>
             </a>
-        </div>
+        </main>
+        <div id="top-of-site-pixel-anchor"></div>
     </body>
 </html>
