Set opacity to 0 for anchor pixel and change contact image to png

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         </div>
                     </div>
                     <div class="right-side">
-                        <img src="assets/vector_graphics/contact_graphic.svg" alt="Contact page graphic">
+                        <img src="assets/screenshots/contact.png" alt="Contact page graphic">
                     </div>
                 </div>
             </div>
