Change font weight for headings and footer background color

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="full-page diseases-layout">
                     <h1 class="section-heading margin-bottom-medium">Øyesykdommer</h1>
                     <span class="heading-accent margin-bottom-medium"></span>
-                    <h2 class="section-subheading margin-bottom-large">Informasjonen du trenger om ulike sykdommer</h2>
+                    <h2 class="section-subheading margin-bottom-large">Informasjonen du trenger om ulike sykdommer.</h2>
                     <div class="disease-div">
                         <div class="disease-card">
                             <h3 class="disease-heading margin-bottom-small">Grå stær - Katarakt</h3>
@@ -167,7 +167,7 @@
                     </div>
                 </div>
             </div>
-            <div id="contact-page" class="full-page-background contact-background-color margin-bottom-massive">
+            <div id="contact-page" class="full-page-background contact-background-color margin-bottom-very-large">
                 <div class="full-page layout column-gap-very-large">
                     <div class="left-side">
                         <h1 class="section-heading margin-bottom-medium">Kontakt oss</h1>
@@ -203,7 +203,9 @@
                 </div>
             </div>
             <footer class="footer">
-                <p>Made with 🖤 by <a class="personal-page-link strong-text" href="https://maximilian.netlify.app/" target="_blank" rel="noopener">Maximilian von Stephanides</a></p>
+                <p class="footer-text">Made with 💛 by
+                    <a class="personal-page-link" href="https://maximilian.netlify.app/" target="_blank" rel="noopener"><strong>Maximilian von Stephanides</strong></a>
+                </p>
             </footer>
             <button class="to-top-button hide">Opp til toppen</button>
             <a href="#about-page">
