Add Source Serif/Sans Pro and change text style for find card section heading

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"> <!-- Animate.css -->
         <link href="https://unpkg.com/webkul-micron@1.1.6/dist/css/micron.min.css" type="text/css" rel="stylesheet"> <!-- Micron js -->
         <script src="https://unpkg.com/webkul-micron@1.1.6/dist/script/micron.min.js" type="text/javascript"></script> <!-- Micron js -->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@700;900&display=swap" rel="stylesheet"> <!-- Source Serif Pro -->
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet"> <!-- Source Sans Pro -->
         <script src="navigation.js"></script>
         <script src="scroll_events.js"></script>
     </head>
