Add social link card and favicon

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <meta name="description" content="Din øyelege i Haugesund og omegn">
         <meta property="og:title" content="Haugesund Øyelegesenter">
         <meta property="og:description" content="Din øyelege i Haugesund og omegn">
-        <meta property="og:image" content="assets/demo_screenshot.png">
-        <meta property="og:url" content="https://haugesund_oyelegesenter.netlify.app">
+        <meta property="og:image" content="assets/screenshots/demo_screenshot.png">
+        <meta property="og:url" content="https://haugesundos.netlify.app/">
         <meta name="twitter:card" content="summary">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"> <!-- Animate.css -->
@@ -18,6 +18,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@700;900&display=swap" rel="stylesheet"> <!-- Source Serif Pro -->
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet"> <!-- Source Sans Pro -->
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io_hos/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io_hos/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io_hos/favicon-16x16.png">
         <script src="navigation.js"></script>
         <script src="scroll_events.js"></script>
     </head>
