Fix text styling in footer

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             </div>
             <footer class="footer">
                 <p class="footer-text">Made with 💛 by
-                    <a class="personal-page-link" href="https://maximilian.netlify.app/" target="_blank" rel="noopener"><b>Maximilian von Stephanides</b></a>
+                    <a class="personal-page-link" href="https://maximilian.netlify.app/" target="_blank" rel="noopener"><span class="bold-text">Maximilian von Stephanides</span></a>
                 </p>
             </footer>
             <button class="to-top-button hide">Opp til toppen</button>
